# embed_dir

./: Cargo.toml  README.adoc
src/: main.rs
src/test/: pr.rs
test_folder/: Cargo.toml
test_folder/pr/: README.adoc
